# samgraha

./: .env.example  .gitignore  Cargo.toml  README.md  opencode.json  samgraha.toml
.planning/: PLAN.md
archive/crates/audit/: Cargo.toml
archive/crates/audit/src/: calculation.rs  capability.rs  check_runner.rs  contract.rs  framework.rs  lib.rs  pipeline.rs  spec_parser.rs  yaml_runner.rs
archive/crates/audit/src/fix/: mod.rs  orchestrator.rs  planner.rs  planning_context.rs  types.rs  verifier.rs
audit/: Cargo.toml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  output.rs
compiler/: Cargo.toml
compiler/src/: extraction.rs  pipeline.rs  processing.rs  resolution.rs
crates/audit/: Cargo.toml
crates/audit/src/: capability.rs  check_runner.rs  contract.rs  framework.rs  lib.rs  pipeline.rs  pipeline_factory.rs  providers.rs  spec_parser.rs
crates/audit/src/fix/: executor.rs  orchestrator.rs  planner.rs  planning_context.rs
crates/audit/src/pipelines/: architecture.rs  build.rs  consistency.rs  coverage.rs  dependency.rs  design.rs  deterministic_runtime.rs  documentation_structure.rs  engineering.rs  external_context.rs  external_context_ownership.rs  feature.rs  feature_design.rs  feature_technical.rs  help.rs  implementation.rs  knowledge_system.rs  mod.rs  philosophy.rs  prototype.rs  readme.rs  security.rs  vision.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  lib.rs  main.rs  output.rs
crates/common/: Cargo.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: discovery.rs  extraction.rs  graph.rs  items.rs  lib.rs  loader.rs  pipeline.rs  processing.rs
crates/mcp/: Cargo.toml  build.rs
crates/mcp/src/: adapter.rs  main.rs  protocol.rs
crates/registry/: Cargo.toml
crates/registry/src/: core_schema.rs  integrity.rs  lib.rs  migration.rs  registry_db.rs  store.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/schemas/: Cargo.toml
crates/schemas/src/: audit.rs  diagnostics.rs  document.rs  error.rs  fix.rs  graph.rs  knowledge_system.rs  lib.rs  manifest.rs  package.rs  planning.rs  scoreband.rs  search.rs  standard.rs  urn.rs
crates/services/: Cargo.toml
crates/services/src/: audit.rs  builtin.rs  compilation.rs  context.rs  context_manager.rs  enrichment.rs  init.rs  knowledge_publish.rs  lib.rs  metadata_cache.rs  package.rs  register_standard.rs  registry_client.rs  reporting.rs  resolution.rs  search.rs  session.rs  step_execution.rs  workspace.rs
crates/services/src/project_planner/: context.rs  executors.rs  orchestrator.rs  planners.rs
crates/services/src/runtime/: mod.rs  policy.rs  runtime.rs
crates/standards/: Cargo.toml
crates/standards/src/: builtin.rs  db_reader.rs  lib.rs  loader.rs  registry.rs
crates/tests/: knowledge.db
docs/: audit-plan.md  codebase-refactoring-proposal.md  content-generation-mcp-proposal.md  crates-refactor-proposal.md  documentation-cleanup-proposal.md  documentation-staleness-round2-proposal.md  generic-script-architecture-proposal.md  knowledge-system-author-guide.md  manual-audit.md  mcp-configuration.md  proposal.md  schema-redesign-proposal.md  test.md
docs/knowledge-hub/: 00-domain-relationships.md
docs/raw/: proposal.md
mcp/: Cargo.toml
mcp/src/: lib.rs
providers/: Cargo.toml
providers/src/: config.rs
registry/src/: query.rs  store.rs
runtime/src/: context.rs  policy.rs  runtime.rs
schema/knowledge/: 01-usecase.sql  02-script.sql  03-prompt.sql  04-step.sql  05-step_script.sql  06-step_prompt.sql  07-execution.sql  08-custom_data_tables.sql  README.md
schema/knowledge-hub/: 00-reset.sql  01-systems.sql  02-standards.sql  03-domains.sql  04-relationship_types.sql  05-domain_relationships.sql  06-section_catalog.sql  07-script_checks.sql  08-script_check_dependencies.sql  09-documents.sql  10-plan_generation_inputs.sql  10-sections.sql  11-rules.sql  12-rule_evidence_params.sql  13-audit_results.sql  14-scores.sql  15-script_cache.sql  17-standard_docs.sql  18-calculation_rules.sql  19-calculation_inputs.sql  23-validation_rules.sql  24-workflow_stages.sql  25-system_plans.sql  25-workflow_use_cases.sql  26-workflow_phases.sql  README.md  knowledge-hub-loader.py
schema/registration/: 00-repository_cache.sql
schemas/: Cargo.toml
schemas/src/: compilation.rs  document.rs  lib.rs  search.rs  standard.rs
scripts/: audit-phase1.ps1  audit-phase1.sh  build-release.ps1  build-release.sh  demo-dependency.ps1  demo-dependency.sh  knowledge-hub-loader.py  mcp-discover.ps1  mcp-discover.sh  run-tests.ps1  run-tests.sh  test-coverage.ps1  test-coverage.sh
scripts/lib/: report.ps1  report.sh
scripts/ubuntu/: artifact-exists.sh  build-succeeds.sh  dependency-manifest.sh  dependency-reachable.sh  dependency-vuln-scan.sh  (+13 more)
services/: Cargo.toml
services/src/: compilation.rs  registry.rs  search.rs
tests/: Cargo.toml  knowledge.db
tests/docs/raw/reports/architecture/scorecard/history/: 1783932198-rev1783932198.md  1783932243-rev1783932243.json  1783932243-rev1783932243.md  1783938148-rev1783938148.md  1783938596-rev1783938596.md  1784403152-rev1784403152.json  1784403152-rev1784403152.md  1784403785-rev1784403785.json  1784403785-rev1784403785.md  1784404039-rev1784404039.md  1784404197-rev1784404197.md  1784404429-rev1784404429.json  1784404524-rev1784404524.json  1784404524-rev1784404524.md  1784405047-rev1784405047.md  1784405052-rev1784405052.md  1784405214-rev1784405214.json  1784405349-rev1784405349.json  1784405349-rev1784405349.md  1784405888-rev1784405888.md  1784406799-rev1784406799.md  1784407099-rev1784407099.json  1784407099-rev1784407099.md  1784407420-rev1784407420.json  1784407420-rev1784407420.md  1784407713-rev1784407713.json  1784410261-rev1784410261.md
tests/sample-docs/architecture/: system-overview.md
tests/sample-docs/feature/: knowledge-compilation.md
tests/tests/: e2e_compile.rs  e2e_fix.rs  e2e_pipeline_semantic_review.rs  e2e_pipeline_semantic_review_all.rs  e2e_planner.rs  e2e_registry.rs  e2e_registry_client.rs  e2e_services.rs  e2e_summary_report.rs
tests/tests/fixtures/: mod.rs
(+1503 files in other folders)
