[workspace]
resolver = "2"
members = [
    "schemas",
    "standards",
    "services",
    "compiler",
    "registry",
    "runtime",
    "audit",
    "providers",
    "cli",
    "mcp",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
proptest = "1"
rstest = "0.18"
criterion = "0.5"

schemas = { path = "schemas" }
standards = { path = "standards" }
services = { path = "services" }
compiler = { path = "compiler" }
registry = { path = "registry" }
runtime = { path = "runtime" }
audit = { path = "audit" }
providers = { path = "providers" }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = 0
incremental = false
strip = "symbols"
