[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/schemas",
    "crates/standards",
    "crates/services",
    "crates/compiler",
    "crates/registry",
    "crates/audit",
    "crates/providers",
    "crates/cli",
    "crates/mcp",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
proptest = "1"
rstest = "0.18"
criterion = "0.5"
pulldown-cmark = "0.11"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "2"

common = { path = "crates/common" }
schemas = { path = "crates/schemas" }
standards = { path = "crates/standards" }
services = { path = "crates/services" }
compiler = { path = "crates/compiler" }
registry = { path = "crates/registry" }
audit = { path = "crates/audit" }
providers = { path = "crates/providers" }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = 0
incremental = false
strip = "symbols"
