[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
runtime.workspace = true
audit.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
