[package]
name = "compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
standards.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
sha2.workspace = true
rayon.workspace = true
