[package]
name = "services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
standards.workspace = true
compiler.workspace = true
audit.workspace = true
providers.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
