[package]
name = "audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
schemas.workspace = true
standards.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
chrono.workspace = true
