[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
services.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
