[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
schemas.workspace = true
services.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
