[package]
name = "registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
compiler.workspace = true
audit.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rusqlite.workspace = true
