[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
registry.workspace = true
services.workspace = true
audit.workspace = true
standards.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
