[package]
name = "schemas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true

[build-dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
toml.workspace = true
