[package]
name = "services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
schemas.workspace = true
registry.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
