[package]
name = "standards"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemas.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2.workspace = true
toml.workspace = true
