[package]
name = "audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
schemas.workspace = true
standards.workspace = true
compiler.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rayon.workspace = true
chrono.workspace = true
toml.workspace = true
regex.workspace = true
rusqlite.workspace = true
walkdir = "2"
